--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .calculator-body {
     height: 450px;
     width: 300px;
