--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
 }
 
 .calculator-body {
+    display: flex;
+    flex-direction: column;
     height: 450px;
     width: 300px;
     background-color: gray;
