--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ body {
 .screen-section {
     height: 100px;
 }
+
+.screen {
+    height: 75px;
+    width: 275px;
+    background-color: rgb(7, 7, 53);
+}
