--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 .screen-section {
     display: flex;
     height: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 .screen {
