--- a/style.css
+++ b/style.css
@@ -27,4 +27,7 @@ body {
 
 .buttons-section {
     display: grid;
+    grid-template-rows: repeat(4, 80px);
+    grid-template-columns: repeat(4, 1fr);
+    padding: 10px;
 }
