--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     height: 75px;
     width: 275px;
     background-color: rgb(7, 7, 53);
+    color: greenyellow;
 }
 
 .buttons-section {
