--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     width: 275px;
     background-color: rgb(7, 7, 53);
     color: greenyellow;
+    font-size: 30px;
 }
 
 .buttons-section {
